--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "antd": "^4.1.1",
+    "freezeframe": "^4.1.3",
     "moment": "^2.24.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-freezeframe": "^4.1.3",
     "react-scripts": "3.4.1",
     "rxjs": "^6.5.5",
     "typescript": "~3.7.2"
