--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "radio-tsumugi",
   "version": "1.0.0",
   "private": true,
+  "homepage": "/wp-content/web-radio",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
