--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-freezeframe": "^4.1.3",
-    "react-scripts": "3.4.1",
+    "react-scripts": "4.0.1",
     "rxjs": "^6.5.5",
-    "typescript": "~3.7.2"
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "start": "PORT=3006 react-scripts start",
