--- a/public/config.json
+++ b/public/config.json
@@ -1,4 +1,4 @@
 {
-  "radioUrl": "http://shelter.mahoro-net.org:8000/tsumugi",
+  "radioUrl": "https://radio.mahoro-net.org/streams/tsumugi",
   "scheduleUrl": "https://cors-anywhere.herokuapp.com/https://tsumugi.forum-thalie.fr/get_api_result.php"
 }
