#1 Fix search when a new song arrive in the history (filtering was ignored)

--- a/public/config.json
+++ b/public/config.json
@@ -1,4 +1,4 @@
 {
   "radioUrl": "https://radio.mahoro-net.org/streams/tsumugi",
-  "scheduleUrl": "https://cors-anywhere.herokuapp.com/https://tsumugi.forum-thalie.fr/get_api_result.php"
+  "scheduleUrl": "https://cors.bridged.cc/https://tsumugi.forum-thalie.fr/get_api_result.php"
 }
